@@ -16,7 +16,5 @@ deps=
 commands=
     python -c "import shutil,os,stat;os.path.exists('packaging') and shutil.rmtree('packaging', onerror=lambda fn, path, _:os.chmod(path,stat.S_IWRITE) or fn(path))"
     git clone --depth 1 https://github.com/pypa/packaging.git
-    # patch packaging parser pre 21.2 release
-    python -c "from pathlib import Path;p=Path('packaging/packaging/requirements.py');p.write_text(p.read_text().replace('MARKER_EXPR.setParseAction','MARKER_EXPR.addParseAction').replace('s[t._original_start : t._original_end]','t.marker'))"
     python -m pytest packaging/tests
     python -c "import shutil,os,stat;shutil.rmtree('packaging', onerror=lambda fn, path, _:os.chmod(path,stat.S_IWRITE) or fn(path))"
